fix main nav synopsis and left alignment

--- a/public/css/main-navbar.css
+++ b/public/css/main-navbar.css
@@ -56,7 +56,7 @@ html {
           flex-direction: column;
           justify-content: center;
           list-style: none;
-          text-align: center;
+          text-align: left;
         }
         .navigation__item {
           margin: 1rem;
